--- a/framework-res/res/values/bools.xml
+++ b/framework-res/res/values/bools.xml
@@ -16,7 +16,7 @@
     <bool name="config_wifi_p2p_support">true</bool>
     <bool name="config_wifi_background_scan_support">false</bool>
     <bool name="config_bypass_keyguard_if_slider_open">true</bool>
-    <bool name="config_automatic_brightness_available">false</bool>
+    <bool name="config_automatic_brightness_available">true</bool>
     <bool name="config_annoy_dianne">true</bool>
     <bool name="config_unplugTurnsOnScreen">false</bool>
     <bool name="config_animateScreenLights">false</bool>
