--- a/MiuiHome/res/xml/default_workspace.xml
+++ b/MiuiHome/res/xml/default_workspace.xml
@@ -4,12 +4,12 @@
     <default launcher:screen="2" />
     <folder launcher:screen="1" launcher:x="2" launcher:y="3" launcher:title="com.miui.home:string/default_folder_title_tools" />
     <search launcher:screen="0" launcher:x="0" launcher:y="0" />
-    <clock launcher:screen="1" launcher:x="0" launcher:y="0" />
+    <clock launcher:screen="1" launcher:x="1" launcher:y="0" />
     <favorite launcher:className="com.sonyericsson.android.camera.CameraActivity" launcher:packageName="com.sonyericsson.android.camera" launcher:screen="1" launcher:x="0" launcher:y="2" />
     <favorite launcher:className="com.miui.gallery.app.Gallery" launcher:packageName="com.miui.gallery" launcher:screen="1" launcher:x="1" launcher:y="2" />
     <favorite launcher:className="com.miui.player.ui.MusicBrowserActivity" launcher:packageName="com.miui.player" launcher:screen="1" launcher:x="2" launcher:y="2" />
     <favorite launcher:className="com.android.thememanager.ThemeResourceTabActivity" launcher:packageName="com.android.thememanager" launcher:screen="1" launcher:x="3" launcher:y="2" />
-    <favorite launcher:className="com.android.settings.Settings" launcher:packageName="com.android.settings" launcher:screen="1" launcher:x="0" launcher:y="3" />
+    <favorite launcher:className="com.android.settings.MiuiSettings" launcher:packageName="com.android.settings" launcher:screen="1" launcher:x="0" launcher:y="3" />
     <favorite launcher:className="com.miui.supermarket.MainTabActivity" launcher:packageName="com.xiaomi.market" launcher:screen="1" launcher:x="1" launcher:y="3" />
     <favorite launcher:className="com.android.deskclock.DeskClock" launcher:packageName="com.android.deskclock" launcher:container="1" launcher:x="0" launcher:y="0" />
     <favorite launcher:className="com.android.calculator2.Calculator" launcher:packageName="com.android.calculator2" launcher:container="1" launcher:x="0" launcher:y="0" />
