force @android:style/Theme.Holo.Light using @drawable/background_holo_light as windowBackground
Change-Id: I26dc5143adaf1b10a40243312af3fb4022a2ce89

--- a/framework-res/res/values/styles.xml
+++ b/framework-res/res/values/styles.xml
@@ -1172,6 +1172,7 @@
         <item name="windowTitleSize">25.0dip</item>
         <item name="windowTitleStyle">@style/WindowTitle.Holo</item>
         <item name="windowTitleBackgroundStyle">@style/WindowTitleBackground.Holo</item>
+		<item name="windowBackground">@drawable/background_holo_light</item>
         <item name="alertDialogStyle">@style/AlertDialog.Holo.Light</item>
         <item name="panelBackground">@drawable/menu_hardkey_panel_holo_light</item>
         <item name="panelFullBackground">@drawable/menu_background_fill_parent_width</item>
